# comp-scan

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh
.cursor/plans/: compscan_local_ai_agent_2925e21a.plan.md
.cursor/rules/: compscan.mdc
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_rule.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PLAN_AUDIT.md  README.md  USER_GUIDE.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: lib.rs  main.rs
src/actions/: cleanup.rs  executor.rs  mod.rs  optimization.rs  permissions.rs  workflow.rs
src/ai/: mod.rs  ollama.rs  prompts.rs  reasoning.rs
src/analyzer/: insights.rs  mod.rs  rules.rs  statistics.rs
src/cli/: mod.rs
src/daemon/: mod.rs  scheduler.rs
src/observer/: activity.rs  coding.rs  habits.rs  mod.rs  patterns.rs
src/scanner/: filesystem.rs  mod.rs  processes.rs  security.rs  startup.rs  system.rs
src/storage/: db.rs  encryption.rs  mod.rs  models.rs
src/ui/: mod.rs  notifications.rs
src/ui/tui/: actions.rs  app.rs  dashboard.rs  insights.rs  mod.rs  widgets.rs
src/ui/web/: mod.rs  server.rs  templates.rs
