[package]
name = "compscan"
version = "0.1.0"
edition = "2021"
authors = ["Vivek Yaligar <vkyaligar@gmail.com>"]
description = "A fully local AI agent that observes, learns, and optimizes your digital life"
license = "MIT"
repository = "https://github.com/vvk147/comp-scan"
homepage = "https://github.com/vvk147/comp-scan"
readme = "README.md"
keywords = ["ai", "agent", "local", "productivity", "system-monitor"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# System information (cross-platform)
sysinfo = "0.32"

# Embedded database
redb = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# HTTP client (for Ollama)
reqwest = { version = "0.12", features = ["json", "stream"] }

# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
walkdir = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
hostname = "0.4"
num_cpus = "1"
bytesize = "1"
futures = "0.3"
tokio-stream = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
